--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,39 +9,40 @@
 <body>
   <header>
    <nav>
-    <a href="/">Web Studio</a>
+    <a href="./index.html">WebStudio</a>
     <ul>
-        <li><a href="">Студія</a></li>
-        <li><a href="">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
+     <li><a href="./index.html">Студія</a></li>
+     <li><a href="./index.html">Портфоліо</a></li>
+     <li><a href="./index.html">Контакти</a></li>
     </ul>
    </nav>
-   <a href="info@devstudio.com">info@devstudio.com</a>
-   <a href="+38 096 111 11 11">+38 096 111 11 11</a>
+     <ul>
+      <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="+380961111111">+38 096 111 11 11</a></li>
+     </ul>
   </header>    
-  <main>
-    <div>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button>Замовити послугу</button>
-        </section>
-      </div>
-      <section>
+  <main>  
+     <section>
+      <h1>Ефективні рішення для вашого бізнесу</h1>
+      <button>Замовити послугу</button>
+     </section>  
+     <section>
+        <h2>Наші переваги</h2>
         <ul>
             <li>
-                <h2>УВАГА ДО ДЕТАЛЕЙ</h2>>
+                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p>Ідейні міркування, i навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li>
-                <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                <h3>ПУНКТУАЛЬНІСТЬ</h3>
                 <p>Завдання організації, особливо рамки i місце навчання кадрів тягне y.</p>
             </li>
             <li>
-                <h2>ПЛАНУВАННЯ</h2>
+                <h3>ПЛАНУВАННЯ</h3>
                 <p>Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li>
-                <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
@@ -57,30 +58,32 @@
       <section>
         <h2>Наша команда</h2>
         <ul>
-            <li><img src="./img/img-4.jpg" alt="фото" width="270"></li>
-            <h2>Игор Дем'яненко</h2>
-            <p>Product Designer</p>
-            <li><img src="./img/img-5.jpg" alt="фото" width="270"></li>
-            <h2>Ольга Рєпіна</h2>
-            <p>Frontend Developer</p>
-            <li><img src="./img/img-6.jpg" alt="фото" width="270"></li>
-            <h2>Микола Тарасов</h2>
-            <p>Marketing</p>
-            <li><img src="./img/img-7.jpg" alt="фото" width="270"></li>
-            <h2>Михайло Єрмаков</h2>
-            <p>UI Designer</p>
+            <li><img src="./img/img-4.jpg" alt="перший член команди" width="270"></li>
+            <h3>Игор Дем'яненко</h3>
+            <p lang="en">Product Designer</p>
+            <li><img src="./img/img-5.jpg" alt="другий член команди" width="270"></li>
+            <h3>Ольга Рєпіна</h3>
+            <p lang="en"> Frontend Developer</p>
+            <li><img src="./img/img-6.jpg" alt="третій член команди" width="270"></li>
+            <h3>Микола Тарасов</h3>
+            <p lang="en">Marketing</p>
+            <li><img src="./img/img-7.jpg" alt="четвертий член команди" width="270"></li>
+            <h3>Михайло Єрмаков</h3>
+            <p lang="en">UI Designer</p>
         </ul>
       </section>
   </main>
   <footer>
-    <a href="">Web Studio</a>
-    <ul>
-         <li>м. Київ, пр-т Лесі Українки, 26</li>
-        <li>
-            <a href="info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>+38 096 111 11 11</li>
-    </ul>
+    <a href="./index.html">WebStudio</a>
+    <address>
+        <ul>
+            <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+           <li>
+               <a href="mail:info@devstudio.com">info@devstudio.com</a>
+           </li>
+           <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+       </ul>
+    </address>
   </footer>
 </body>
 </html>
