--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </ul>
    </nav>
      <ul>
-      <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="+380961111111">+38 096 111 11 11</a></li>
+      <li><a href="mail to:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111">+380961111111</a></li>
      </ul>
   </header>    
   <main>  
      <section>
       <h1>Ефективні рішення для вашого бізнесу</h1>
-      <button>Замовити послугу</button>
+      <button type="button">Замовити послугу</button>
      </section>  
      <section>
         <h2>Наші переваги</h2>
@@ -79,7 +79,7 @@
         <ul>
             <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
            <li>
-               <a href="mail:info@devstudio.com">info@devstudio.com</a>
+               <a href="mail to:info@devstudio.com">info@devstudio.com</a>
            </li>
            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
        </ul>
